--- a/BrewTracker/Src/IngredientScreen.fx.yaml
+++ b/BrewTracker/Src/IngredientScreen.fx.yaml
@@ -1,4 +1,4 @@
-"Screen1 As screen.'phoneLayout_HeaderAndForm_ver3.0'":
+"IngredientScreen As screen.'phoneLayout_HeaderAndForm_ver3.0'":
 
     RectQuickActionBar1 As rectangle:
         Height: =88
