--- a/BrewTracker/Src/MainScreen.fx.yaml
+++ b/BrewTracker/Src/MainScreen.fx.yaml
@@ -70,6 +70,7 @@ MainScreen As screen:
     Button1 As button:
         Fill: =RGBA(187, 221, 140, 1)
         Height: =38
+        OnSelect: =Navigate(BrewScreen)
         Size: =24
         Text: ="Create New"
         Width: =252
