--- a/BrewTracker/Src/MainScreen.fx.yaml
+++ b/BrewTracker/Src/MainScreen.fx.yaml
@@ -23,7 +23,7 @@ MainScreen As screen:
             PaddingLeft: =0
             PaddingRight: =0
             PaddingTop: =0
-            Text: =ThisItem.'Brew Name'
+            Text: =
             VerticalAlign: =VerticalAlign.Top
             Width: =Parent.TemplateWidth - Image1.Width - 104
             X: =Image1.X + Image1.Width + 24
@@ -69,12 +69,12 @@ MainScreen As screen:
 
     Button1 As button:
         Fill: =RGBA(187, 221, 140, 1)
-        Height: =38
+        Height: =73
         Size: =24
-        Text: ="Create New"
-        Width: =252
-        X: =377
-        Y: =523
+        Text: ="Create New Brew"
+        Width: =263
+        X: =363
+        Y: =488
         ZIndex: =2
 
     Label1 As label:
@@ -86,4 +86,16 @@ MainScreen As screen:
         Width: =560
         X: =40
         ZIndex: =3
+
+    TextInput1 As text:
+        Default: =""
+        Font: =Font.'Lato Black'
+        Height: =70
+        HintText: ="Search A Brew"
+        OnChange: =
+        Size: =21
+        Width: =286
+        X: =16
+        Y: =491
+        ZIndex: =4
 
