--- a/BrewTracker/Src/MainScreen.fx.yaml
+++ b/BrewTracker/Src/MainScreen.fx.yaml
@@ -1,7 +1,7 @@
 MainScreen As screen:
 
     "Gallery1 As gallery.'BrowseLayout_Vertical_TwoTextOneImageVariant_ver4.0'":
-        Items: ='Info Stores'
+        Items: =Filter('Info Stores', 'Info Stores (Views)'.'Active Info Stores')
         Layout: =Layout.Vertical
         TemplatePadding: =0
         TemplateSize: =Min(160, Self.Height - 60)
@@ -23,7 +23,7 @@ MainScreen As screen:
             PaddingLeft: =0
             PaddingRight: =0
             PaddingTop: =0
-            Text: =
+            Text: =ThisItem.'Brew Name'
             VerticalAlign: =VerticalAlign.Top
             Width: =Parent.TemplateWidth - Image1.Width - 104
             X: =Image1.X + Image1.Width + 24
@@ -37,7 +37,7 @@ MainScreen As screen:
             PaddingLeft: =0
             PaddingRight: =0
             PaddingTop: =0
-            Text: =ThisItem.'Created On'
+            Text: =ThisItem.'%ABV'
             VerticalAlign: =VerticalAlign.Top
             Width: =Title1.Width
             X: =Title1.X
