--- a/BrewTracker/Src/MainScreen.fx.yaml
+++ b/BrewTracker/Src/MainScreen.fx.yaml
@@ -1,7 +1,7 @@
 MainScreen As screen:
 
     "Gallery1 As gallery.'BrowseLayout_Vertical_TwoTextOneImageVariant_ver4.0'":
-        Items: ='Info Stores'
+        Items: =Search('Info Stores', TextInput1.Text, "Brew Name")
         Layout: =Layout.Vertical
         TemplatePadding: =0
         TemplateSize: =Min(160, Self.Height - 60)
