--- a/BrewTracker/Src/MainScreen.fx.yaml
+++ b/BrewTracker/Src/MainScreen.fx.yaml
@@ -1,7 +1,13 @@
 MainScreen As screen:
+    OnVisible: =Refresh('Info Stores');
 
     "Gallery1 As gallery.'BrowseLayout_Vertical_TwoTextOneImageVariant_ver4.0'":
-        Items: =Search('Info Stores', TextInput1.Text, "Brew Name")
+        Items: |-
+            =Search(
+                'Info Stores',
+                TextInput1.Text,
+                "Brew Name"
+            )
         Layout: =Layout.Vertical
         TemplatePadding: =0
         TemplateSize: =Min(160, Self.Height - 60)
